--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 Django==4.1.4
 dnspython==2.2.1
+gunicorn==20.1.0
 idna==3.4
 loguru==0.6.0
 pinecone-client==2.0.13
@@ -15,3 +16,4 @@ sqlparse==0.4.3
 tqdm==4.64.1
 typing_extensions==4.4.0
 urllib3==1.26.13
+whitenoise==6.2.0
