--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 Django==4.1.4
+django-cors-headers==3.13.0
 dnspython==2.2.1
 gunicorn==20.1.0
 idna==3.4
