updated settings to work with cors

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ export HUGGING_FACE_ENDPOINT_URL=""
 export HUGGING_FACE_API_KEY=""
 
 export PINECONE_API_KEY=""
+export DJANGO_SECRET_KEY=""
+export DJANGO_DEBUG="True"
