add postgresql installation instructions
see: https://tutorial-extensions.djangogirls.org/en/optional_postgresql_installation/

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-export HUGGING_FACE_ENDPOINT_URL=""
+export POSTGRES_USERNAME=""
+export POSTGRES_PASSWORD=""
+export POSTGRES_HOST=""
+export POSTGRES_PORT=""
 
+export HUGGING_FACE_URL=""
 export HUGGING_FACE_API_KEY=""
-
 export PINECONE_API_KEY=""
 export DJANGO_SECRET_KEY=""
-export DJANGO_DEBUG="True"
+export DJANGO_DEBUG=""
