--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==20.1.0
 idna==3.4
 loguru==0.6.0
 pinecone-client==2.0.13
+psycopg2==2.9.5
 python-dateutil==2.8.2
 pytz==2022.7
 PyYAML==6.0
