--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
+dj-database-url==1.2.0
 Django==4.1.4
 django-cors-headers==3.13.0
 dnspython==2.2.1
