--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.1.1
 dj-database-url==1.2.0
 Django==4.1.4
 django-cors-headers==3.13.0
+djangorestframework==3.14.0
 dnspython==2.2.1
 gunicorn==20.1.0
 idna==3.4
