update instructions for running on new mac

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ export HUGGING_FACE_URL=""
 export HUGGING_FACE_API_KEY=""
 export PINECONE_API_KEY=""
 export DJANGO_SECRET_KEY=""
-export DJANGO_DEBUG=""
+export DJANGO_DEBUG="True"
