--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ idna==3.4
 loguru==0.6.0
 multidict==6.0.4
 pinecone-client==2.0.13
-psycopg2==2.9.5
+psycopg2==2.9.5 #psycopg2 might not work on mac so use psycopg2-binary==2.9.5
 Pygments==2.14.0
 PySocks==1.7.1
 python-dateutil==2.8.2
