--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ export HUGGING_FACE_API_KEY=""
 export PINECONE_API_KEY=""
 export DJANGO_SECRET_KEY=""
 export DJANGO_DEBUG="True"
+export ATILA_STAGE="dev"
