--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,14 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 commonmark==0.9.1
 defusedxml==0.7.1
+distlib==0.3.6
 dj-database-url==1.2.0
 Django==4.1.4
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 dnspython==2.2.1
+filelock==3.9.0
 gunicorn==20.1.0
 httpie==3.2.1
 idna==3.4
@@ -16,6 +19,7 @@ multidict==6.0.4
 pinecone-client==2.0.13
 psycopg2==2.9.5 #psycopg2 might not work on mac so use psycopg2-binary==2.9.5
 Pygments==2.14.0
+PyJWT==2.6.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytube==12.1.2
@@ -29,5 +33,6 @@ sqlparse==0.4.3
 tqdm==4.64.1
 typing_extensions==4.4.0
 urllib3==1.26.13
+virtualenv==20.17.1
 whitenoise==6.2.0
 youtube-transcript-api==0.5.0
