--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ PyYAML==6.0
 requests==2.28.1
 requests-toolbelt==0.10.1
 rich==13.0.0
+sentry-sdk==1.16.0
 six==1.16.0
 sqlparse==0.4.3
 tqdm==4.64.1
