--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ export DJANGO_DEBUG="True"
 export ATILA_STAGE="dev"
 export SENTRY_DSN=""
 export POPLAR_API_KEY=""
+export OPENAI_API_KEY="sk-..."
