--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
 asgiref==3.6.0
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+cachetools==5.3.1
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
+comm==0.1.2
 commonmark==0.9.1
+debugpy==1.6.5
+decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.6
 dj-database-url==1.2.0
@@ -10,30 +25,110 @@ django-cors-headers==3.13.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 dnspython==2.2.1
+entrypoints==0.4
+executing==1.2.0
+fastjsonschema==2.16.2
 filelock==3.9.0
+fqdn==1.5.1
+google-api-core==2.11.0
+google-api-python-client==2.88.0
+google-auth==2.19.1
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.59.0
 gunicorn==20.1.0
 httpie==3.2.1
+httplib2==0.22.0
 idna==3.4
+importlib-metadata==6.0.0
+ipykernel==6.20.2
+ipython==8.8.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isoduration==20.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-events==0.6.3
+jupyter_client==7.4.9
+jupyter_core==5.1.3
+jupyter_server==2.1.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
 loguru==0.6.0
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mistune==2.0.4
 multidict==6.0.4
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.8
+nbformat==5.7.3
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+packaging==23.0
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 pinecone-client==2.0.13
-psycopg2==2.9.5 #psycopg2 might not work on mac so use psycopg2-binary==2.9.5
+platformdirs==2.6.2
+prometheus-client==0.15.0
+prompt-toolkit==3.0.36
+protobuf==4.23.2
+psutil==5.9.4
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
 Pygments==2.14.0
 PyJWT==2.6.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-json-logger==2.0.4
 pytube==12.1.2
 pytz==2022.7
 PyYAML==6.0
+pyzmq==25.0.0
+qtconsole==5.4.0
+QtPy==2.3.0
 requests==2.28.1
 requests-toolbelt==0.10.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==13.0.0
+rsa==4.9
+Send2Trash==1.8.0
 sentry-sdk==1.16.0
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
+stack-data==0.6.2
+stripe==5.4.0
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.2
 tqdm==4.64.1
+traitlets==5.8.1
 typing_extensions==4.4.0
+uri-template==1.2.0
+uritemplate==4.1.1
 urllib3==1.26.13
 virtualenv==20.17.1
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.4.2
 whitenoise==6.2.0
+widgetsnbextension==4.0.5
 youtube-transcript-api==0.5.0
+zipp==3.11.0
