--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ attrs==22.2.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
+boto3==1.36.21
+botocore==1.36.21
 cachetools==5.3.1
 certifi==2022.12.7
 cffi==1.15.1
@@ -30,6 +32,7 @@ executing==1.2.0
 fastjsonschema==2.16.2
 filelock==3.9.0
 fqdn==1.5.1
+fsspec==2025.2.0
 google-api-core==2.11.0
 google-api-python-client==2.88.0
 google-auth==2.19.1
@@ -38,6 +41,7 @@ googleapis-common-protos==1.59.0
 gunicorn==20.1.0
 httpie==3.2.1
 httplib2==0.22.0
+huggingface-hub==0.28.1
 idna==3.4
 importlib-metadata==6.0.0
 ipykernel==6.20.2
@@ -47,6 +51,8 @@ ipywidgets==8.0.4
 isoduration==20.11.0
 jedi==0.18.2
 Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.4.2
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
@@ -62,19 +68,23 @@ loguru==0.6.0
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
 mistune==2.0.4
+mpmath==1.3.0
 multidict==6.0.4
 nbclassic==0.4.8
 nbclient==0.7.2
 nbconvert==7.2.8
 nbformat==5.7.3
 nest-asyncio==1.5.6
+networkx==3.2.1
 notebook==6.5.2
 notebook_shim==0.2.2
+numpy==2.0.2
 packaging==23.0
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+pillow==11.1.0
 pinecone-client==5.0.1
 pinecone-plugin-inference==1.1.0
 pinecone-plugin-interface==0.0.7
@@ -103,14 +113,20 @@ PyYAML==6.0
 pyzmq==25.0.0
 qtconsole==5.4.0
 QtPy==2.3.0
+regex==2024.11.6
 requests==2.28.1
 requests-toolbelt==0.10.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.0.0
 rsa==4.9
+s3transfer==0.11.2
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.13.1
 Send2Trash==1.8.0
 sendgrid==6.11.0
+sentence-transformers==3.4.1
 sentry-sdk==1.16.0
 six==1.16.0
 sniffio==1.3.0
@@ -119,12 +135,17 @@ sqlparse==0.4.3
 stack-data==0.6.2
 starkbank-ecdsa==2.2.0
 stripe==5.4.0
+sympy==1.13.1
 terminado==0.17.1
+threadpoolctl==3.5.0
 tinycss2==1.2.1
+tokenizers==0.21.0
+torch==2.6.0
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.8.1
-typing_extensions==4.4.0
+transformers==4.48.3
+typing_extensions==4.12.2
 uri-template==1.2.0
 uritemplate==4.1.1
 urllib3==1.26.13
